syntax = "proto3";
package wrappers;

import "pserver/pserver.proto";

option go_package = "github.com/dave/groupshare/server/pb/wrappers;wrappers";

message Snapshot {
  pserver.Snapshot value = 1; // the snapshot
  string user = 2;            // user id
}

message ShareSnapshot {
  pserver.Snapshot value = 1; // the snapshot
  string user = 2;            // user id
  string name = 3;            // name of the Share
}